🎨 just wanted to fix linking to external files and fixing the overflow that was occurring

--- a/Site/index.html
+++ b/Site/index.html
@@ -12,9 +12,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
     />
 
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/Site/style.css">
     
-    <link rel="stylesheet" href="/simple-grid.css">
+    <link rel="stylesheet" href="/Site/simple-grid.css">
 
     <meta name="title" content="Orpheus Leap ">
     <meta name="description" content="A Hack Club themed microcontroller board based on the Arduino Leondardo">
