one more fix with the js

--- a/Site/index.html
+++ b/Site/index.html
@@ -33,7 +33,7 @@
     <meta property="twitter:description" content="A Hack Club themed microcontroller board based on the Arduino Leondardo">
     <meta property="twitter:image" content="https://cloud-isnfo2hml.vercel.app/untitled_design-10.png">
 
-    <script src="/script.js" defer></script>
+    <script src="/Site/script.js" defer></script>
   </head>  
   <body>
     <div class="container vertical-center" style="background-color: #252429; padding: 30px; border-radius: 30px">
